Added spotless as a code format validator and auto-formatter